Criando template de listagem de categorias

--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -1,1 +1,39 @@
-<p>category-list works!</p>
+<nav>
+    <ol class="breadcrumb custom-breadcrumb">
+        <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+        <li class="breadcrumb-item active">Categorias</li>
+    </ol>
+</nav>
+
+<div class="row mb-4">
+    <div class="col-md">
+        <h1 class="h2 border-left">Categorias</h1>
+    </div>
+    <div class="col-md">
+        <a routerLink="new" class="btn btn-success float-end">+ Nova Categoria</a>
+    </div>
+</div>
+
+<table class="table table-hover">
+    <thead>
+        <tr class="bg-primary text-light">
+            <th>Categoria</th>
+            <th class="text-center">Ações</th>
+        </tr>
+    </thead>
+
+    <tbody>
+        <tr *ngFor="let category of categories">
+            <td>
+                <strong>{{ category.name }}</strong><br>
+                <small>{{ category.description }}</small>
+            </td>
+  
+            <!-- BOTÕES -->
+            <td class="text-center">
+                <a [routerLink]="[category.id, 'edit']" class="btn btn-outline-info btn-sm me-2">Editar</a>
+                <button (click)="deleteCategory(category.id)" class="btn btn-outline-danger btn-sm">Excluir</button>
+            </td>
+        </tr>
+    </tbody>
+  </table>
