--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -23,6 +23,18 @@
     </thead>
 
     <tbody>
+        <tr *ngFor="let category of categories">
+            <td>
+                <strong>{{ category.name }}</strong><br>
+                <small>{{ category.description }}</small>
+            </td>
+      
+            <!-- BOTÕES -->
+            <td class="text-center">
+                <a [routerLink]="[category.id, 'edit']" class="btn btn-outline-info btn-sm me-2">Editar</a>
+                <button (click)="deleteCategory(category)" class="btn btn-outline-danger btn-sm">Excluir</button>
+            </td>
+          </tr>
         
     </tbody>
   </table>
