--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -1,1 +1,53 @@
-<p>category-form works!</p>
+<nav class="mb-5">
+    <ol class="breadcrumb custom-breadcrumb">
+        <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+        <li class="breadcrumb-item"><a routerLink="/categories">Categorias</a></li>
+        <li class="breadcrumb-item active">{{ pageTitle }}</li>
+    </ol>
+</nav>
+
+<div class="row mb-4">
+    <div class="col-md-9">
+        <h1 class="h2 border-left pl-2">{{ pageTitle }}</h1>
+    </div>
+    <div class="col-md-3">
+        <a routerLink="/categories" class="btn btn-light btn-right-pos"><< Voltar</a>
+    </div>
+</div>
+
+<form autocomplete="off" [formGroup]="categoryForm">
+
+    <div class="card">
+        <div class="card-header">Informações sobre a Categoria</div>
+
+        <div class="card-body">
+            <div class="row">
+                <div class="form-group col-md-4">
+                    <label for="name">Nome</label>
+                    <input type="text" class="form-control" id="name" formControlName="name">
+
+                    <div class="text-danger"
+                        *ngIf="categoryForm.get('name').invalid && categoryForm.get('name').touched">
+                        <div *ngIf="categoryForm.get('name').errors.required">Campo obrigatório</div>
+                        <div *ngIf="categoryForm.get('name').errors.minlength">Deve ter no mínimo 2 caracteres</div>
+                    </div>
+                </div>
+                <div class="form-group col-md-8">
+                    <label for="description">Descrição</label>
+                    <input type="text" class="form-control" id="description" formControlName="description">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="alert alert-danger mt-4">
+    <strong>Erro no Servidor</strong>
+    <ul>
+      <li *ngFor="let error of serverErrorMessages">{{ error }}</li>
+    </ul>
+  </div> -->
+    <button type="submit" 
+            (click)="submitForm()" 
+            [disabled]="submittinForm || categoryForm.invalid"
+            class="btn btn-primary btn-lg float-right mt-3 btn-right-pos">Salvar</button>
+</form>
